2018-11-26    <d.scott@auckland.ac.nz>

	* DESCRIPTION and NAMESPACE updated to appease CRAN

2010-02-10    <d.scott@auckland.ac.nz>

	* Depends changed to DistributionUtils, GeneralizedHyperbolic
	instead of HyperbolicDist. References to HyperbolicDist eliminated
	(particularly in .Rd files), all imports changed, and all
	references to imported functions checked. Package passes check.

2009-10-02    <d.scott@auckland.ac.nz>

	* DESCRIPTION, vgChangePars.Rd, vgCheckPars.Rd changed to correct
	minor errors. Now passes R2.9.2 CMD CHECK 

2009-09-25    <d.scott@auckland.ac.nz>

	* dvg.R changed only code checking on nu, otherwise mine seemed
	newer compared to version in email 23/09/2009

	* vgFit.R changed following email from Christine 23/09/2009

	* vgChangePars.R updated following email from Christine 20/09/2009

	* check the man files: summary.vgFit.Rd, VarianceGamma.Rd,
	vgCalcRange.Rd, vgChangePars.Rd, vgCheckPars.Rd, vgFit.Rd,
	vgFitStart.Rd, vgParam.Rd, vgPlots.Rd, vgMom.Rd

2009-09-24    <d.scott@auckland.ac.nz>

	* vgMom.R added to VarianceGamma/R

	* Started substituting functions from vg0.2-1 into current
	VarianceGamma

	vgParam.R, DESCRIPTION, NAMESPACE, dvg.R, summary.vgFit.R,
	vgCalcRange.R, vgChangePars.R, vgChangePars.R, vgCheckPars.R,
	vgFit.R, vgFitStart.R, vgMeanVarMode.R (was vgMomentsAndMode),
	vgPlots.R

	still need to check man files

2009-09-09    <d.scott@auckland.ac.nz>

	* vgMomentsAndMode.R needs to have vgMom added and then to be
	updated. This code to come from vg0.2-1 submitted by
	Christine. Have already made some minor changes to this code.

2009-07-21    <d.scott@auckland.ac.nz>

	* Checked code submitted by Christine: vgChangePars.R,
	vgChangePars.Rd, dvg.R, pvg.R, qvg.R, rvg.R ddvg.R, vgBreaks.R,
	VarianceGamma.Rd, vgFitStart.R, vgFitStartMoM.R (no apparent
	changes though), vgParam.R, vgParam.Rd, vgCheckPars.R, vgCheckPars.Rd

	* Changes submitted by Christine: For the R codes, the major